Fix spacing in post

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 :root {
-    --background: rgb(24, 24, 25);
+    --background: rgb(20, 20, 22);
     --font-color: rgb(255, 255, 255);
     --header-height: 54px;
     --info-p-border: 1px solid rgba(0, 0, 0, 0.15);
@@ -31,7 +31,7 @@ body {
 
 /*Header*/
 header {
-    background-color: #1F2229;
+    background-color: rgb(30, 30, 37);
     height: var(--header-height);
     display: flex;
     position: relative;
@@ -44,7 +44,7 @@ header div {
 }
 
 .name h1 {
-    color: #3E9DFF;
+    color: rgb(62, 157, 255);
     line-height: var(--header-height);
     font-size: 22px;
     font-weight: 500;
@@ -65,7 +65,7 @@ ul li {
 }
 
 ul li:hover {
-    color: #3E9DFF;
+    color: rgb(62, 157, 255);
 }
 
 .pfp {
@@ -149,18 +149,19 @@ ul li:hover {
 
 /*Main*/
 textarea {
-    background-color: #1F2229;
+    background-color: rgb(31, 34, 41);
     resize: none;
     width: 100%;
     height: 220px;
     border-radius: 6px;
     direction: ltr;
     text-align: left;
-    color: #fff;
+    color: rgb(255, 255, 255);
     padding: 15px 20px;
     padding-bottom: 30px;
     font-size: 16px;
     overflow: hidden;
+    border: 1px solid rgba(255, 255, 255, 0.03);
 }
 
 .feed {
@@ -191,7 +192,7 @@ section {
 .img-input p {
     padding-left: 10px;
     line-height: 32px;
-    color: #ffffffad;
+    color: rgba(255, 255, 255, 0.678);
     font-size: 14px;
     white-space: nowrap;
     overflow: hidden;
@@ -205,7 +206,7 @@ section {
 }
 
 .button button {
-    background-color: #2993FF;
+    background-color: rgb(41, 147, 255);
     color: #fff;
     height: 36px;
     padding: 0 16px;
@@ -215,7 +216,7 @@ section {
 }
 
 .button button:hover {
-    background-color: #1277dd;
+    background-color: rgb(18, 119, 221);
 }
 
 input[type="file"] {
@@ -226,7 +227,7 @@ label {
     cursor: pointer;
     font-size: 22px;
     text-align: left;
-    color: #ffffffad;
+    color: rgba(255, 255, 255, 0.678);
 }
 
 /*Posts*/
@@ -236,9 +237,9 @@ label {
 
 .post {
     width: 100%;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     border-radius: 6px;
-    color: black;
+    color: rgb(0, 0, 0);
     padding: 15px;
 }
 
@@ -277,4 +278,9 @@ label {
 
 .post + .post {
     margin-top: 15px;
+}
+
+.post-img {
+    border-radius: 6px;
+    margin-top: 8px;
 }
